# ConstantIndexVector

./: .gitignore  CMakeLists.txt  README.md
include/: index_vector.hpp
lib/catch2/: catch_amalgamated.cpp  catch_amalgamated.hpp
src/: main.cpp
test/: test.cpp
